--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 				</section>	
 				<section data-state="dataviz">
 				<style>.dataviz header.left:after { content: "Data Visualization (DV)"; }</style>
-					<img src="img/syrian.jpg" width="90%">
-					<small>From “2015: The Year in Graphics”, Los Angeles Times</small>
+					<img src="img/syrian.jpg" width="100%", style="margin-top:40px;">
+					<p><a href="http://graphics.latimes.com/2015-in-graphics/"><small>From “2015: The Year in Graphics”, Los Angeles Times</small></a></p>
 					<aside class="notes">
 						<ul>
 							<li>In the last few decades, evidence-based policymaking has become an important topic in the conversations among government departments, research organizations, and think tanks. Evidence-based policymaking utilizes evidence from research to inform the policymaking process, which brings about social, economic, and fiscal benefits.</li>
@@ -144,7 +144,7 @@
 				</section>
 				<section data-state="dataviz">
 					<img src="img/cookie.jpg" width="100%">
-					<small>From “2015: The Year in Graphics”, Los Angeles Times</small>
+					<p><a href="http://graphics.latimes.com/2015-in-graphics/"><small>From “2015: The Year in Graphics”, Los Angeles Times</small></a></p>
 					<aside class="notes">
 						<ul>
 							<li>In the last few decades, evidence-based policymaking has become an important topic in the conversations among government departments, research organizations, and think tanks. Evidence-based policymaking utilizes evidence from research to inform the policymaking process, which brings about social, economic, and fiscal benefits.</li>
@@ -443,7 +443,7 @@
 				</section>
 				<section data-state="tuberculosis">
 				<style>.tuberculosis header.left:after { content: "Tuberculosis"; }</style>
-					<img src="img/combatTUB_full.png" width="100%">
+					<img src="img/combatTUB_full.png" width="100%" style="margin-top:40px;">
 					<aside class="notes">
 						<ul>
 							<li>Tuberculosis is the third and final disease that was officially a part of the MDG goals.</li>
@@ -625,7 +625,7 @@
 				<section data-state="prin1">
 				<style>.prin1 header.left:after { content: "First Principle"; }</style>
 					<img src="img/prin2.jpg" width="90%">
-					<p><small>Figure: TB in the DPRK from “North Korea Tuberculosis”, TheGlobalEconomy.com</small></p>
+					<p><a href="http://www.theglobaleconomy.com/North-Korea/Tuberculosis/"><small>Figure: TB in the DPRK from “North Korea Tuberculosis”, TheGlobalEconomy.com</small></a></p>
 					<h5>Quantitative values should be displayed using the lengths of simple, two-dimensional objects.</h5>
 					<aside class="notes">
 						<ul>
@@ -640,7 +640,7 @@
 				<section data-state="prin2">
 				<style>.prin2 header.left:after { content: "Second Principle"; }</style>
 					<img src="img/prin3.jpg" width="75%">
-					<p><small>Figure: Snapshot of animation showing temperatures, 1880-2015, from bloomberg.com</small></p>
+					<p><a href="http://www.bloomberg.com/graphics/2014-hottest-year-on-record/"><small>Figure: Snapshot of animation showing temperatures, 1880-2015, from bloomberg.com</small></a></p>
 					<h5>Viewers cannot see a pattern formed by multiple values if they only look at one value at a time. </h5>
 					<aside class="notes">
 						<ul>
@@ -660,7 +660,7 @@
 				<section data-state="prin3">
 				<style>.prin3 header.left:after { content: "Third Principle"; }</style>
 					<img src="img/prin4.jpg" width="100%">
-					<p><small>Figure: Asylum applications,  April 2011 - August 2015, extracted from latimes.com</small></p>
+					<p><a href="http://graphics.latimes.com/syrian-migration/"><small>Figure: Asylum applications,  April 2011 - August 2015, extracted from latimes.com</small></a></p>
 					<h5>Showing multiple graphs together can be better than showing a single graph.</h5>
 					<aside class="notes">
 						<ul>
@@ -680,8 +680,8 @@
 				</section>				
 				<section data-state="prin4">
 				<style>.prin4 header.left:after { content: "Fourth Principle"; }</style>
-					<img src="img/prin5.jpg" width="70%">
-					<p><small>Figure: North Korea vs. South Korea, 2013,  from theguardian.com</small></p>
+					<img src="img/prin5.jpg" width="70%" style="margin-top:40px;">
+					<p><a href="http://www.theguardian.com/world/datablog/interactive/2013/apr/09/north-korea-south-korea-interactive"><small>Figure: North Korea vs. South Korea, 2013,  from theguardian.com</small></a></p>
 					<h5>Viewers should be able to focus on data of interest.</h5>
 					<aside class="notes">
 						<ul>
@@ -701,7 +701,7 @@
 				</section>				
 				<section data-state="system1">
 				<style>.system1 header.left:after { content: "System One"; }</style>
-					<img src="img/system1.jpg" width="70%">
+					<img src="img/system1.jpg" width="70%" style="margin-top:40px;">
 					<h2>What comes to mind when you glance at this picture?</h2>
 					<aside class="notes">
 						<ul>
@@ -778,8 +778,8 @@
 					<h4>Ariel Lee</h4>
 				</section>
 				<section data-state="case2">
-					<h6>Maternal Mortality Ratio per 100,000 live births of Developing and Developed Countries</h6>
-					<img src="img/matMOR.jpg" width="75%">
+					<h6 style="margin-top:40px;">Maternal Mortality Ratio per 100,000 live births of Developing and Developed Countries</h6>
+					<img src="img/matMOR.jpg" width="100%">
 					<aside class="notes">
 						<ul>
 							<li>Maternal mortality was chosen as an indicator for the health of a set of vulnerable women.</li>
@@ -797,7 +797,7 @@
 					</aside>
 				</section>
 				<section data-state="case2">
-					<h6>Heatmap of Maternal Mortality in Developing and Developed Countries</h6>
+					<h6 style="margin-top:40px;">Heatmap of Maternal Mortality in Developing and Developed Countries</h6>
 					<img src="img/matMORheat.jpg" width="100%">
 					<aside class="notes">
 						<ul>
@@ -808,8 +808,8 @@
 					</aside>
 				</section>
 				<section data-state="case2">
-					<h6>Gender Parity Index in secondary level enrolment in Developing and Developed Countries</h6>
-					<img src="img/genPAR_full.png" width="70%">
+					<h6 style="margin-top:40px;">Gender Parity Index in secondary level enrolment in Developing and Developed Countries</h6>
+					<img src="img/genPAR_full.png" width="80%">
 					<aside class="notes">
 						<ul>
 							<li>The second indicator chosen was gender parity index in secondary level enrolment.</li>
@@ -824,8 +824,8 @@
 					</aside>
 				</section>
 				<section data-state="case2">
-					<h6>Proportion of Seats Held by Women in National Parliament in Developing and Developed Countries</h6>
-					<img src="img/propWOM_full.png", width="65%">
+					<h6 style="margin-top:40px;">Proportion of Seats Held by Women in National Parliament in Developing and Developed Countries</h6>
+					<img src="img/propWOM_full.png", width="80%">
 					<aside class="notes">
 						<ul>
 							<li>Proportion of seats held by women in national parliament was chosen because political power is considered the highest level of women’s empowerment in the UN,</li>
@@ -839,8 +839,8 @@
 						</ul>
 					</aside>
 				</section>
-				<section data-state="case2">
-					<h3>Implications for Policymakers:</h3>
+				<section data-state="case2_con">
+				<style>.case2_con header.left:after { content: "Implications for Policymakers"; }</style>
 					<ul>
 						<li>Focus more on helping certain  developing countries (outliers)</li>
 						<li>Developing countries contain a range of countries</li>
@@ -916,8 +916,8 @@
 						</ul>
 					</aside>
 				</section>
-				<section data-state="case3">
-					<h3>Implications for Policymakers:</h3>
+				<section data-state="case3_con">
+				<style>.case3_con header.left:after { content: "Implications for Policymakers"; }</style>
 					<ul>
 						<li>Use countries such as Costa Rica and Honduras as examples</li>
 						<li>Inequalities in access to health care facilities need to be eliminated.</li>
@@ -964,8 +964,8 @@
 					</aside>
 				</section>
 				<section data-state="case4_topnk">
-				<style>.case4_topnk header.left:after { content: "Implications for policymakers: quality of facilities, transportation, and weather"; }</style>
-					<img src="img/TopographyNK.png" width="75%">
+				<style>.case4_topnk header.left:after { content: "Implications for policymakers"; }</style>
+					<img src="img/TopographyNK.png" width="80%" style="margin-top:40px;">
 					<aside class="notes">
 						<ul>
 							<li>A possible explanation is that the capital has better hospital facilities; therefore, deaths occur at the hospital, as opposed to at home or elsewhere. The three aforementioned provinces, which have the lowest percentages of deaths at hospital, are located in mountainous areas. Therefore, citizens of those provinces might have difficulty accessing the hospital.</li>
@@ -986,7 +986,7 @@
 				</section>
 				<section data-state="case4_stu">
 				<style>.case4_stu header.left:after { content: "Global stunting in children in the DPRK"; }</style>
-					<img src="img/globSTU.jpg" width="70%">
+					<img src="img/globSTU.jpg" width="65%" style="margin-top:40px;">
 					<aside class="notes">
 						<ul>
 							<li>We observe that the provinces that suffer from higher prevalence of malnutrition, such as Ryanggang, Jagang, and Kangwon, are mountainous provinces.</li>
@@ -1006,7 +1006,7 @@
 				</section>
 				<section data-state="case4_was">
 				<style>.case4_was header.left:after { content: "Global wasting in children in the DPRK"; }</style>
-					<img src="img/globWAS.jpg" width="70%">
+					<img src="img/globWAS.jpg" width="65%" style="margin-top:40px;">
 					<aside class="notes">
 						<ul>
 							<li>The elite capital?</li>
@@ -1085,26 +1085,26 @@
 					<h2>Visualizing</h2>
 					<h4>Star Ying</h4>
 				</section>
-				<section data-state="header35">
-				<style>.header35 header.left:after { content: "Impediments to creating/using Development Goal Indicators"; }</style>
-					<p>There is a lot of missing data, even for well established indicators/indexes</p>
-					<p>Especially in the social and education arena</p>
-					<p>Also very costly to create</p>
-				</section>
-				<section data-state="header35">
+				<section data-state="situation">
+				<style>.situation header.left:after { content: "MDGs of Social and Education Issues"; }</style>
 					<h5>Gender Parity Index in primary level enrolment</h5>
 					<div id="coord"></div>
 					<script src="js/parallel_coord.js"></script>
 				</section>
-				<section data-state="header35">
+				<section data-state="situation">
 					<ul>
 						<li>We can see the upward trend of primary level enrolment</li>
 						<li>Only capture if a nation is succeeding or failing, not suggest policy interventions that may help or where to help</li>
 					</ul>
 				</section>
-				<section data-state="header35">
-					<p>Gender Parity Index in primary level enrolment</p>
+				<section data-state="situation">
+					<h5>Gender Parity Index in primary level enrolment (2009-2012)</h5>
 					<iframe src="small_multiples.html" style="width:900px; height:500px;"></iframe>
+				</section>
+				<section data-state="situation">
+					<p>There is a lot of missing data, even for well established indicators/indexes</p>
+					<p>Especially in the social and education arena</p>
+					<p>Also very costly to create</p>
 				</section>
 				<section data-state="header36">
 				<style>.header36 header.left:after { content: "Potential alternatives"; }</style>
