--- a/small_multiples.html
+++ b/small_multiples.html
@@ -11,7 +11,8 @@
     <div id="map3" style="width:450px; height:250px;"></div>
     <div id="map4" style="width:450px; height:250px;"></div>
     <script src="js/leaflet/leaflet.js"></script>
-    <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script>
+    <!-- <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.2.0/leaflet-omnivore.min.js'></script> -->
+    <script src="js/leaflet-omnivore.min.js"></script>
     <script src="js/small_multiples.js"></script>
 </body>
 </html>
