--- a/index.html
+++ b/index.html
@@ -1111,14 +1111,21 @@
 				</section>
 				<section data-state="header37">
 				<style>.header37 header.left:after { content: "Pilot Example"; }</style>
+					<h2>Using Satellite imagery as proxies for MDG Indicators</h2>
+					<h4>Two Satellite Products</h4>
+					<ul>
+						<li>Visible Infrared Imaging Radiometer Suite (VIIRS) Nighttime Lights</li>
+						<li>Defense Meteorological Satellite Program (DMSP) Nighttime Lights</li>
+					</ul>
+				</section>
+				<section data-state="header37">
 					<!-- <img src="data/image/China/china.gif" style="width:250px">
 					<img src="data/image/Bangladesh/bangladesh.gif" style="width:250px">
 					<img src="data/image/Japan/Fukushima.gif" style="width:250px">
 					<img src="data/image/Vietnam/vietnam.gif" style="width:250px"> -->
-					<p>Example: Using Satellite imagery in conjunction with MDG Indicators</p>
-					<p>North Korea vs South Korea</p>
-					<img src="data/image/North Korea/north-korea.gif" style="width:400px">
-					<img src="data/image/South Korea/south-korea.gif" style="width:400px">
+					<h2>North Korea vs South Korea</h2>
+					<img src="data/image/North Korea/north-korea.gif" style="width:48%">
+					<img src="data/image/South Korea/south-korea.gif" style="width:48%">
 				</section>
 				<section data-state="header37">
 					<p>Monthly Average Radiance Levels of various Asian Nations from 2014 to present</p>
