resize images for faster loading

--- a/index.html
+++ b/index.html
@@ -1124,8 +1124,8 @@
 					<img src="data/image/Japan/Fukushima.gif" style="width:250px">
 					<img src="data/image/Vietnam/vietnam.gif" style="width:250px"> -->
 					<h2>North Korea vs South Korea</h2>
-					<img src="data/image/North Korea/north-korea.gif" style="width:48%">
-					<img src="data/image/South Korea/south-korea.gif" style="width:48%">
+					<img src="data/image/North Korea/north-korea-resize.gif" style="width:48%">
+					<img src="data/image/South Korea/south-korea-resize.gif" style="width:48%">
 				</section>
 				<section data-state="header37">
 					<p>Monthly Average Radiance Levels of various Asian Nations from 2014 to present</p>
