added hannah's notes

--- a/index.html
+++ b/index.html
@@ -869,6 +869,11 @@
 				<style>.case3 header.left:after { content: "Case Example Data Visualization 3:"; }</style>
 					<h2>Malnutrition in Central America and its Relationship to Key Health Conditions</h2>
 					<h4>Hannah Cho</h4>
+					<aside class="notes">
+						<ul>
+							<li>For my research question, I decided to focus on Malnutrition, Incidence of Tuberculosis and the Maternal Mortality Ratio particularly in Central America. I wanted to see whether or not there was a correlation between malnutrition and key health conditions, assess how different countries’ health conditions changed over time with the implementation of MDGs, and offer how health policy in Central America should be changed in the future.</li>
+						</ul>
+					</aside>
 				</section>
 				<section data-state="case3_under">
 				<style>.case3_under header.left:after { content: "Case Example Data Visualization 3:"; }</style>
