--- a/index.html
+++ b/index.html
@@ -1118,7 +1118,7 @@
 				<style>.header37 header.left:after { content: "Pilot Example"; }</style>
 					<h2>Using Satellite imagery as proxies for MDG Indicators</h2>
 					<h4>Two Satellite Products</h4>
-					<ul>
+					<ul style="list-style:none;">
 						<li>Visible Infrared Imaging Radiometer Suite (VIIRS) Nighttime Lights</li>
 						<li>Defense Meteorological Satellite Program (DMSP) Nighttime Lights</li>
 					</ul>
