--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
 				</section>
 				<section data-state="case3_under">
 				<style>.case3_under header.left:after { content: "Case Example Data Visualization 3:"; }</style>
-					<img src="img/propUND.jpg" width="85%">
+					<img src="img/propUND_new.png" width="85%">
 					<aside class="notes">
 						<ul>
 							<li>The region that I focused on is the Mexico/Central American Region of Developing Economies as defined by the World Economic Situation and Prospects of 2012.</li>
@@ -891,7 +891,7 @@
 				</section>
 				<section data-state="case3_stunt">
 				<style>.case3_stunt header.left:after { content: "Case Example Data Visualization 3:"; }</style>
-					<img src="img/prevSTU.jpg", width="85%">
+					<img src="img/prevSTU_new.jpg", width="85%">
 					<aside class="notes">
 						<ul>
 							<li>This line plot represents the Prevalence of stunting, height for age of children under age 5 for the same countries.</li>
@@ -902,7 +902,7 @@
 				</section>
 				<section data-state="case3_tub">
 				<style>.case3_tub header.left:after { content: "Case Example Data Visualization 3:"; }</style>
-					<img src="img/incTUB.jpg", width="85%">
+					<img src="img/incTUB_new.jpg", width="85%">
 					<aside class="notes">
 						<ul>
 							<li>This line plot represents the Incidence of Tuberculosis per 100,000 people for the same group of countries.</li>
@@ -914,7 +914,7 @@
 				</section>
 				<section data-state="case3_mat">
 				<style>.case3_mat header.left:after { content: "Case Example Data Visualization 3:"; }</style>
-					<img src="img/MMR.jpg", width="85%">
+					<img src="img/MMR_new.jpg", width="85%">
 					<aside class="notes">
 						<ul>
 							<li>This line plot portrays the Maternal Mortality Ratio per 100,000 live births in the same countries.</li>
