minor bad reference

--- a/index.html
+++ b/index.html
@@ -877,7 +877,7 @@
 				</section>
 				<section data-state="case3_under">
 				<style>.case3_under header.left:after { content: "Case Example Data Visualization 3:"; }</style>
-					<img src="img/propUND_new.png" width="85%">
+					<img src="img/propUND_new.jpg" width="85%">
 					<aside class="notes">
 						<ul>
 							<li>The region that I focused on is the Mexico/Central American Region of Developing Economies as defined by the World Economic Situation and Prospects of 2012.</li>
