--- a/index.html
+++ b/index.html
@@ -1251,50 +1251,46 @@
 				</section>
 				<section data-state="bib">
 				<style>.bib header.left:after { content: "Bibliography"; }</style>
-				<span style="font-size:20px;"><ul style="list-style:none;">
-						<li><a href="http://graphics.latimes.com/2015-in-graphics/">2015: the year in graphics</a>. (n.d.). Retrieved July 27, 2016.</li>
-						<li><a href="https://www.odi.org/sites/odi.org.uk/files/odi-assets/publications-opinion-files/7814.pdf">A good news case study: Tanzania Essential Health Interventions Project</a>. (n.d.). Retrieved July 27, 2016.</li>
-						<li>Acosta, M., Bermudez, J. L., Saenz, M.R. (2010). <a href="http://www.who.int/healthsystems/topics/financing/healthreport/CostaRicaNo11.pdf">Universal Coverage in a Middle Income Country: Costa Rica. WHO</a>.</li>
-						<li>Buitron, R., Paepe, P. D., Soors, W., Unger, J. P. (2008 April). <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2376989/">Costa Rica: Achievements of a Heterodox Health Policy. Am J Public Health</a>.</li>
-						<li>Card, S. K., Mackinlay, J. D., & Shneiderman, B. (1999). Readings in Information Visualization: Using Vision to Think. Morgan Kaufmann.</li>
+				<span style="font-size:20px;"><ul style="list-style:none; margin-top:50px;">
+					<li><a href="http://graphics.latimes.com/2015-in-graphics/">2015: the year in graphics</a>. (n.d.). Retrieved July 27, 2016.</li>
+					<li><a href="https://www.odi.org/sites/odi.org.uk/files/odi-assets/publications-opinion-files/7814.pdf">A good news case study: Tanzania Essential Health Interventions Project</a>. (n.d.). Retrieved July 27, 2016.</li>
+					<li>Acosta, M., Bermudez, J. L., Saenz, M.R. (2010). <a href="http://www.who.int/healthsystems/topics/financing/healthreport/CostaRicaNo11.pdf">Universal Coverage in a Middle Income Country: Costa Rica. WHO</a>.</li>
+					<li>Buitron, R., Paepe, P. D., Soors, W., Unger, J. P. (2008 April). <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2376989/">Costa Rica: Achievements of a Heterodox Health Policy. Am J Public Health</a>.</li>
+					<li>Card, S. K., Mackinlay, J. D., & Shneiderman, B. (1999). Readings in Information Visualization: Using Vision to Think. Morgan Kaufmann.</li>
+					<li>Central Bureau of Statistics. (2009). DPR Korea 2008 Population Census National Report. Pyongyang.</li>
+					<li>Central Bureau of Statistics. (2013). <a href="http://scholar.google.com/scholar?cluster=3018984542116568491&hl=en&oi=scholarr">Democratic People’s Republic of Korea Final Report of the National Nutrition Survey 2012</a>. Pyongyang.</li>
+					<li>Dale, S. (2011, January 13). <a href="https://www.idrc.ca/en/article/case-study-crunching-numbers">CASE STUDY: Crunching the numbers</a>. Retrieved July 27, 2016.</li>
+					<li>Elbow, G. S. (2016) <a href="https://www.britannica.com/place/Costa-Rica">Costa Rica</a>. In Encyclopædia Britannica.</li>
+					<li>Few, S. (2010). Information Visualization, Design, and the Arts Collision or Collaboration. Visual Business Intelligence Newsletter, 1–11.</li>
+					<li>Few, S. (2011, December). <a href="http://www.perceptualedge.com/articles/visual_business_intelligence/visual_difficulties.pdf">Benefitting InfoVis with Visual Difficulties? Provocation Without a Cause</a>. Visual Business Intelligence Newsletter Perceptual Edge.</li>
 					</ul></span>
 				</section>
 				<section data-state="bib">
-				<span style="font-size:20px;"><ul style="list-style:none;">
-						<li>Central Bureau of Statistics. (2009). DPR Korea 2008 Population Census National Report. Pyongyang.</li>
-						<li>Central Bureau of Statistics. (2013). <a href="http://scholar.google.com/scholar?cluster=3018984542116568491&hl=en&oi=scholarr">Democratic People’s Republic of Korea Final Report of the National Nutrition Survey 2012</a>. Pyongyang.</li>
-						<li>Dale, S. (2011, January 13). <a href="https://www.idrc.ca/en/article/case-study-crunching-numbers">CASE STUDY: Crunching the numbers</a>. Retrieved July 27, 2016.</li>
-						<li>Elbow, G. S. (2016) <a href="https://www.britannica.com/place/Costa-Rica">Costa Rica. In Encyclopædia Britannica</a>.</li>
-						<li>Few, S. (2010). Information Visualization, Design, and the Arts Collision or Collaboration. Visual Business Intelligence Newsletter, 1–11.</li>
-						<li>Few, S. (2011, December). <a href="http://www.perceptualedge.com/articles/visual_business_intelligence/visual_difficulties.pdf">Benefitting InfoVis with Visual Difficulties? Provocation Without a Cause”</a>. Visual Business Intelligence Newsletter Perceptual Edge.</li>
+				<span style="font-size:20px;"><ul style="list-style:none; margin-top:50px;">
+					<li>Foundation for Sustainable Development. (n.d.). <a href="http://www.fsdinternational.org/country/nicaragua/healthissues">Child and Maternal Health Issues in Nicaragua</a>.</li>
+					<li>Haskins, R., & Baron, J. (2011). <a href="http://www.brookings.edu/~/media/research/files/reports/2011/9/07%20evidence%20based%20policy%20haskins/0907_evidence_based_policy_haskins.pdf">Building the connection between policy and evidence</a>. The Obama evidence-based initiatives. NESTA.</li>
+					<li><a href="http://www.bloomberg.com/graphics/2014-hottest-year-on-record/">It’s Official: 2014 Was the Hottest Year on Record</a>. (n.d.). Retrieved July 27, 2016.</li>
+					<li>Kahneman, D. (2011). Thinking, Fast and Slow. Macmillan.</li>
+					<li><a href="http://kids.britannica.com/comptons/art-166788">Korea, North: topography</a>. (n.d.). Retrieved July 27, 2016.</li>
+					<li>Krishnakumar, P., & Lauder, T. S. (n.d.). <a href="http://graphics.latimes.com/syrian-migration/">Where are Syria’s refugees now?</a> Retrieved July 27, 2016.</li>
+					<li>Liebman, J. B. (2013). Building on recent advances in evidence-based policymaking. Washington, DC: Brookings Institution.</li>
+					<li><a href="http://mdgs.un.org/unsd/mdg/Data.aspx">Millennium Development Goals Indicator</a>. (n.d.). Retrieved July 27, 2016.</li>
+					<li>Muhlhausen, D. B. (2015). Evidence-based policymaking: A primer. The Heritage Foundation.</li>
+					<li>Neilson, S., & Smutylo, T. (2004). <a href="https://www.idrc.ca/sites/default/files/sp/Documents%20EN/TEHIP-FINAL-April-2004.pdf">The TEHIP “Spark”: Planning and managing health resources at the district level</a>. IDRC - International Development Research Centre.</li>
+					<li>Nguyen, G., Ying, S., Chun, E., Lim, E., Cho, H., Tae, C., … Chun, A. Y. (2015). Data Visualization to Aid Humanitarian Intervention Strategies. ESRA.</li>
+					<li><a href="http://datacatalog.worldbank.org/">Open Data Catalog</a>. (n.d.). Retrieved July 27, 2016.</li>
 					</ul></span>
 				</section>
 				<section data-state="bib">
-				<span style="font-size:20px;"><ul style="list-style:none;">
-						<li>Haskins, R., & Baron, J. (2011). <a href="http://www.brookings.edu/~/media/research/files/reports/2011/9/07%20evidence%20based%20policy%20haskins/0907_evidence_based_policy_haskins.pdf">Building the connection between policy and evidence</a>. The Obama evidence-based initiatives. NESTA.</li>
-						<li><a href="http://www.bloomberg.com/graphics/2014-hottest-year-on-record/">It’s Official: 2014 Was the Hottest Year on Record</a>. (n.d.). Retrieved July 27, 2016.</li>
-						<li>Kahneman, D. (2011). Thinking, Fast and Slow. Macmillan.</li>
-						<li><a href="http://kids.britannica.com/comptons/art-166788">Korea, North: topography</a>. (n.d.). Retrieved July 27, 2016.</li>
-						<li>Krishnakumar, P., & Lauder, T. S. (n.d.). <a href="http://graphics.latimes.com/syrian-migration/">Where are Syria’s refugees now?</a> Retrieved July 27, 2016.</li>
-					</ul></span>
-				</section>
-				<section data-state="bib">
-				<span style="font-size:20px;"><ul style="list-style:none;">
-						<li>Liebman, J. B. (2013). Building on recent advances in evidence-based policymaking. Washington, DC: Brookings Institution.</li>
-						<li><a href="http://mdgs.un.org/unsd/mdg/Data.aspx">Millennium Development Goals Indicator</a>. (n.d.). Retrieved July 27, 2016.</li>
-						<li>Muhlhausen, D. B. (2015). Evidence-based policymaking: A primer. The Heritage Foundation.</li>
-						<li>Neilson, S., & Smutylo, T. (2004). <a href="https://www.idrc.ca/sites/default/files/sp/Documents%20EN/TEHIP-FINAL-April-2004.pdf">The TEHIP “Spark”: Planning and managing health resources at the district level</a>. IDRC - International Development Research Centre.</li>
-						<li>Nguyen, G., Ying, S., Chun, E., Lim, E., Cho, H., Tae, C., … Chun, A. Y. (2015). Data Visualization to Aid Humanitarian Intervention Strategies. ESRA.</li>
-						<li><a href="http://datacatalog.worldbank.org/">Open Data Catalog</a>. (n.d.). Retrieved July 27, 2016.</li>
-						<li>Sutcliffe, S., & Court, J. (2005). Evidence-Based Policymaking: What is it? How does it work? What relevance for developing countries. Overseas Development Institute.</li>
-					</ul></span>
-				</section>
-				<section data-state="bib">
-				<span style="font-size:20px;"><ul style="list-style:none;">
-						<li>TheGlobalEconomy.com. (n.d.). <a href="http://www.theglobaleconomy.com/North-Korea/Tuberculosis/">North Korea Tuberculosis</a>. Retrieved June 21, 2015.</li>
-						<li>The Guardian. (n.d.). <a href="http://www.theguardian.com/world/datablog/interactive/2013/apr/09/north-korea-south-korea-interactive">North Korea v South Korea in Figures - Interactive [The Guardian]</a>.</li>
-						<li>WHO. (May 2014). <a href="http://www.who.int/countryfocus/cooperation_strategy/ccsbrief_gtm_en.pdf">Country Cooperation Strategy at a Glance: Guatemala</a>.</li>
-						<li>World Health Organization (2016). <a href="http://www.who.int/nutgrowthdb/about/introduction/en/index5.html">Global Database on Child Growth and Malnutrition</a>.</li>
+				<span style="font-size:20px;"><ul style="list-style:none; margin-top:50px;">
+					<li>Pineda, C.R.A., Figuero, E. B., Reneau-Vernon, L., Paredes, C., Guemes, A.,... Seaman, I. (February 2009). <a href="http://www.paho.org/PAHO-USAID/dmdocuments/Health_System_Profile-Honduras_2009.pdf">Health Systems Profile Honduras: Monitoring and Analyzing Health Systems Change/Reform</a>. Pan American Health Organization.</li>
+					<li>Saenz, M.R., Bermudez, J. L., Acosta, M. (2010). <a href="http://www.who.int/healthsystems/topics/financing/healthreport/CostaRicaNo11.pdf">Universal Coverage in a Middle Income Country: Costa Rica</a>. WHO.</li>
+					<li>Sutcliffe, S., & Court, J. (2005). Evidence-Based Policymaking: What is it? How does it work? What relevance for developing countries. Overseas Development Institute.</li>
+					<li>TheGlobalEconomy.com. (n.d.). <a href="http://www.theglobaleconomy.com/North-Korea/Tuberculosis/">North Korea Tuberculosis</a>. Retrieved June 21, 2015.</li>
+					<li>The Guardian. (n.d.). <a href="http://www.theguardian.com/world/datablog/interactive/2013/apr/09/north-korea-south-korea-interactive">North Korea v South Korea in Figures - Interactive</a> [The Guardian].</li>
+					<li>Unger, J. P., Paepe, P. D., Buitron, R., Soors, W. (2008 April). <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC2376989/">Costa Rica: Achievements of a Heterodox Health Policy</a>. Am J Public Health.</li>
+					<li>WHO. (May 2014). <a href="http://www.who.int/countryfocus/cooperation_strategy/ccsbrief_gtm_en.pdf">Country Cooperation Strategy at a Glance: Guatemala</a>.</li>
+					<li>World Health Organization (2016). <a href="http://www.who.int/nutgrowthdb/about/introduction/en/index5.html">Global Database on Child Growth and Malnutrition</a>.</li>
 					</ul></span>
 				</section>
 			</div>
