--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@
 					<h4>Giang Nguyen</h4>
 				</section>
 				<section data-state="case5">
-					<iframe src="https://star-is-here.shinyapps.io/giang_leaflet/" width="100%" height="500px"></iframe>
+					<iframe src="https://star-is-here.shinyapps.io/giang_leaflet/" width="100%" height="625px" style="margin-top:25px;"></iframe>
 					<p><small><a href="https://star-is-here.shinyapps.io/giang_leaflet/">https://star-is-here.shinyapps.io/giang_leaflet/</a></small></p>
 				</section>
 				<!-- <section data-state="case5_hist">
